--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,29 @@
 HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.pdb
 HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.dll
 HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csprojAssemblyReference.cache
+.vs/HackerNews/config/applicationhost.config
+.vs/HackerNews/v16/.suo
+.vs/HackerNews/v16/Server/sqlite3/db.lock
+.vs/HackerNews/v16/Server/sqlite3/storage.ide
+.vs/HackerNews/v16/Server/sqlite3/storage.ide-shm
+.vs/HackerNews/v16/Server/sqlite3/storage.ide-wal
+.vs/HackerNews/v16/TestStore/0/000-0000.testlog
+.vs/HackerNews/v16/TestStore/0/testlog.manifest
+.vscode/settings.json
+HackerNews.Domain/bin/Debug/netcoreapp2.2/HackerNews.Domain.deps.json
+HackerNews.Domain/bin/Debug/netcoreapp2.2/HackerNews.Domain.dll
+HackerNews.Domain/bin/Debug/netcoreapp2.2/HackerNews.Domain.pdb
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csproj.CoreCompileInputs.cache
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csproj.FileListAbsolute.txt
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csprojAssemblyReference.cache
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.dll
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.pdb
+HackerNews.Domain/obj/HackerNews.Domain.csproj.nuget.cache
+HackerNews.Test/bin/Debug/netcoreapp2.2/nunit_random_seed.tmp
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.assets.cache
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.csproj.CoreCompileInputs.cache
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.csproj.FileListAbsolute.txt
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.csprojAssemblyReference.cache
+HackerNews.Test/obj/HackerNews.Test.csproj.nuget.cache
+HackerNews.Test/obj/HackerNews.Test.csproj.nuget.dgspec.json
+HackerNews.Test/obj/HackerNews.Test.csproj.nuget.g.props
