--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@ HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.csprojAssemblyReference.
 HackerNews.Test/obj/HackerNews.Test.csproj.nuget.cache
 HackerNews.Test/obj/HackerNews.Test.csproj.nuget.dgspec.json
 HackerNews.Test/obj/HackerNews.Test.csproj.nuget.g.props
+HackerNews.Domain/bin/Debug/netcoreapp2.2/HackerNews.Domain.deps.json
+HackerNews.Domain/bin/Debug/netcoreapp2.2/HackerNews.Domain.dll
+HackerNews.Domain/bin/Debug/netcoreapp2.2/HackerNews.Domain.pdb
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csproj.CoreCompileInputs.cache
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csproj.FileListAbsolute.txt
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.csprojAssemblyReference.cache
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.dll
+HackerNews.Domain/obj/Debug/netcoreapp2.2/HackerNews.Domain.pdb
+HackerNews.Domain/obj/HackerNews.Domain.csproj.nuget.cache
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.assets.cache
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.csproj.CoreCompileInputs.cache
+HackerNews.Test/obj/Debug/netcoreapp2.2/HackerNews.Test.csprojAssemblyReference.cache
+HackerNews.Test/obj/HackerNews.Test.csproj.nuget.cache
+HackerNews.Test/obj/HackerNews.Test.csproj.nuget.dgspec.json
+HackerNews.Test/obj/HackerNews.Test.csproj.nuget.g.props
