Refactoring and initial support for searching

--- a/HackerNews.Web/HackerNews.Web.csproj
+++ b/HackerNews.Web/HackerNews.Web.csproj
@@ -19,9 +19,18 @@
 
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="ClientApp\src\app\fetch-data\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="ClientApp\src\app\fetch-data\**" />
+    <EmbeddedResource Remove="ClientApp\src\app\fetch-data\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="ClientApp\src\app\fetch-data\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="ClientApp\src\domain\story.model.ts" />
+    <None Remove="ClientApp\src\domain\story.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,7 +38,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClientApp\src\app\fetch-data\" />
+    <TypeScriptCompile Include="ClientApp\src\domain\story.model.ts" />
+    <TypeScriptCompile Include="ClientApp\src\domain\story.service.ts" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
